[project]
name = "pytest-robotframework-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [{ include-group = "test" }]
report = [
    "pytest-robotframework>=4.3.2",
    { include-group = "test" },
]
test = [
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = ["E", "I"]
ignore = []
